[package]
name = "usrhttpd"
version = "0.1.0"
edition = "2021"



[dependencies]
tokio = { version = "1", features = ["full"] }

hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "http1", "http2"] }
http-body-util = "0.1"
bytes = "1"

clap = { version = "4", features = ["derive"] }
anyhow = "1"

base64 = "0.21"
sha1 = "0.10"
chrono = "0.4"
mime_guess = "2"

rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2"
