[package]
name = "usrhttpd"
version = "0.1.0"
edition = "2021"
default-run = "usrhttpd"

[lib]
name = "usrhttpd"
path = "src/lib.rs"

[[bin]]
name = "usrhttpd"
path = "src/main.rs"

[[bin]]
name = "usrhttpd-indexgen"
path = "src/bin/indexgen.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["server", "client", "client-legacy", "tokio", "http1", "http2"] }
http-body-util = "0.1"
http-body = "1"
futures-util = "0.3"
bytes = "1"
mime_guess = "2"
clap = { version = "4", features = ["derive"] }
anyhow = { version = "1.0", default-features = false }

base64 = "0.22"
sha1 = "0.10"
hex = "0.4"
regex = "1"
parking_lot = "0.12"

rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2"
flate2 = "1"
chrono = "0.4"

pulldown-cmark = "0.9"
urlencoding = "2"

# log = "0.4"
# env_logger = "0.11"

tracing = "0.1"
tracing-subscriber = "0.3"
